Final UI fixes and spacing improvements

--- a/FRONTEND/style.css
+++ b/FRONTEND/style.css
@@ -6,7 +6,7 @@ body {
 
     background: url("LNMIIT-VIEW.jpg") no-repeat center center/cover;
     height: 100vh;
-
+    gap: 40px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -29,12 +29,12 @@ body::before {
     width: 360px;
     padding: 35px 30px;
 
-    background: rgba(229, 222, 222, 0.65);
+    background: rgba(0, 0, 0, 0.6);
     border-radius: 12px;
 
     text-align: center;
 
-    box-shadow: 0 0 25px rgba(0,0,0,0.6);
+    box-shadow: 0 0 25px rgba(0,0,0,0.5);
 }
 
 
